package eus.ehu.cinemaProject.domain;

public class Review {
    private int reviewId;
    private Film reviewedFilm;
    private String opinion;
    private int rating;
    private String reviewAuthor;
}
