package eus.ehu.cinemaproject.domain;

public enum SeatType {
    NORMAL,
    COMFORTABLE,
    PREMIUM,
    OCCUPIED;
}
